# rv32-llvm-picolibc-xpack

./: README.md  multilib.yaml  package.json
.github/workflows/: build-release.yml  bump-and-tag.yml  ci.yml  create-release-branch.yml
cmake/: clang-riscv-ch32v-minimal.cmake  clang-riscv-ch32v.cmake  clang-riscv-ch32v20x-minimal.cmake  clang-riscv-ch32v303-semihost.cmake  clang-riscv-common.cmake
patches/: llvmorg-21.1.8.patch  llvmorg-22.1.4.patch
picolibc-cross-files/: rv32imac-zicsr-zifencei-xwchc_ilp32.txt  rv32imac-zicsr-zifencei-xwchc_ilp32_exn_rtti.txt  rv32imac-zicsr-zifencei-xwchc_ilp32_minimal.txt  rv32imafc-zicsr-zifencei-xwchc_ilp32f.txt  rv32imafc-zicsr-zifencei-xwchc_ilp32f_exn_rtti.txt  rv32imafc-zicsr-zifencei-xwchc_ilp32f_minimal.txt
scripts/: build-compiler_rt.sh  build-libcxx.sh  build-picolibc.sh
tests/hello_world/: CMakeLists.txt  ch32v303.ld  main.c  os.c
tests/hello_world_cxx/: CMakeLists.txt  ch32v303.ld
tests/semihost_ch32v303/: CMakeLists.txt  ch32v303.ld
tests/semihost_cxx/: CMakeLists.txt
